--- a/src/app/layouts/main-layout/main-layout.component.scss
+++ b/src/app/layouts/main-layout/main-layout.component.scss
@@ -20,6 +20,10 @@
     top: 0;
 }
 
+.content {
+    min-width: 0;
+}
+
 .mat-sidenav {
     width: 100%;
     max-width: 224px;
