--- a/src/app/shared/components/rounded-select/rounded-select.component.scss
+++ b/src/app/shared/components/rounded-select/rounded-select.component.scss
@@ -12,6 +12,7 @@
     > span {
         white-space: nowrap;
         overflow-x: hidden;
+        text-overflow: ellipsis;
     }
 
     > .mat-icon {
