--- a/src/assets/styles/design/_components.scss
+++ b/src/assets/styles/design/_components.scss
@@ -104,7 +104,7 @@
 
 @media (min-width: 48rem) {
     .rounded-card {
-        border-radius: 30px;
+        border-radius: 25px;
         padding: 1.2rem;
     }
 }
